Scrollbar fix

--- a/src/styles/home-page/main.css
+++ b/src/styles/home-page/main.css
@@ -109,16 +109,16 @@
 		opacity: 0.3;
 	}
 }
+
+.all-locations {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  overflow-y: scroll;
+}
+
 .all-locations::-webkit-scrollbar {
 	display: none;
- }
- 
- /* Hide scrollbar for IE, Edge and Firefox */
- .all-locations {
-	-ms-overflow-style: none;  /* IE and Edge */
-	scrollbar-width: none;  /* Firefox */
- }
-
+}
 
 .location-box:focus{
 	opacity: 1;
